<resources>
    <string name="app_name">GoRun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="today_activities">Today Activities</string>
    <string name="distance">212</string>
    <string name="calories">980</string>
    <string name="time">20</string>
    <string name="step_measure">Meters</string>
    <string name="burned_calories">Burned Calories</string>
    <string name="time_measure">Minutes</string>
    <string name="start">Start</string>
    <string name="past_activities">Past Activities</string>
    <string name="search_here">Search by date</string>
    <string name="item_distance">0.4 M</string>
    <string name="date_history">30 November 2021</string>
    <string name="item_cal">112 Cal</string>
    <string name="item_time">4 min</string>
    <string name="track_top_const">You\'ve been jogging for</string>
    <string name="jogging_time">07:55</string>
    <string name="finish">Finish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>