<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp"
    android:orientation="vertical"
    android:background="@drawable/bg_tracking"
    tools:context=".view.tracking.TrackingFragment">

    <!-- TODO: Update blank fragment layout -->

        <TextView
            android:id="@+id/top_const"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_top_const"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/track_top"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tracking_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/jogging_time"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="62sp"
            android:textStyle="bold" />

<!--        Kotak Track disini          -->
<!--        //                          -->
<!--        //                          -->
<!--        //                          -->

        <!--    Bagian Bawah    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_rounded_top_white">

            <View
                android:layout_width="48dp"
                android:layout_height="4dp"
                android:layout_marginTop="11dp"
                android:layout_marginBottom="25dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_blue"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="16dp"
                    android:layout_marginEnd="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/fragment_track_img_footstep"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_footsteps" />

                    <TextView
                        android:id="@+id/fragment_track_distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/distance"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/fragment_track_step_measure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/step_measure"
                        android:textColor="@color/gray"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_rounded_violet"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="16dp"
                    android:layout_marginStart="16dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/fragment_track_img_burned"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_fire" />

                    <TextView
                        android:id="@+id/fragment_track_calories_burned_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/calories"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/fragment_track_calories_burned"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/burned_calories"
                        android:textColor="@color/gray"
                        android:textSize="13sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_track_finish_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:paddingVertical="8dp"
                android:background="@drawable/finish_button"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:text="@string/finish"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_send_24"
                    android:contentDescription="@string/finish" />
            </LinearLayout>

        </LinearLayout>

</LinearLayout>