<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_past">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_circle_red"
        android:layout_marginTop="22dp"
        android:padding="8dp"
        android:layout_marginStart="21dp"
        android:src="@drawable/ic_run"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_run"
        app:layout_constraintTop_toTopOf="parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_footsteps" />

            <TextView
                android:id="@+id/item_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                android:text="@string/item_distance"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_fire" />

            <TextView
                android:id="@+id/item_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                android:text="@string/item_cal"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_stopwatch" />

            <TextView
                android:id="@+id/item_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingStart="6dp"
                android:paddingEnd="0dp"
                android:text="@string/item_time"
                android:textSize="12sp"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/date_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_history"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="13dp"
        android:layout_marginStart="20dp"
        android:paddingBottom="15dp"
        app:layout_constraintStart_toEndOf="@+id/img_run"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>