<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_past"
    tools:context=".view.home.OverallFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="13dp"
        android:layout_marginHorizontal="12dp"
        android:text="This Month Activities"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <!--    Today Activities-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/im_card"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle_blue"
                android:padding="8dp"
                android:src="@drawable/ic_footsteps" />

            <TextView
                android:id="@+id/fragment_overall_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:text="@string/distance"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_measure"
                android:textColor="@color/gray"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="25dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle_pink"
                android:padding="8dp"
                android:src="@drawable/ic_fire" />

            <TextView
                android:id="@+id/fragment_overall_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:text="@string/calories"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/burned_calories"
                android:textColor="@color/gray"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="25dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_circle_yellow"
                android:padding="8dp"
                android:src="@drawable/ic_stopwatch" />

            <TextView
                android:id="@+id/fragment_overall_time_elapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                tools:text="@string/time"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_measure"
                android:textColor="@color/gray"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="12dp"
                android:text="Setting"
                android:textColor="@color/dark_grey"
                android:textSize="15sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_grey" />

            <LinearLayout
                android:id="@+id/fragment_overall_weight_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_square_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Body Weight"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/fragment_overall_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="55.7 Kg"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_overall_height_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_square_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="14dp"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Body Height"
                    android:textColor="@color/dark_grey" />

                <TextView
                    android:id="@+id/fragment_overall_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="166.3 Cm"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>